# tedi

./: .travis.yml  LICENSE  Makefile  README.md  index.md  pyproject.toml  requirements.txt  setup.py  test_01.py  test_03.py  test_04.py
.github/workflows/: ci.yaml  sphinx.yaml
docs/: Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  src.tedi.html  src.tedi.rst  src.tedi.utils.html  src.tedi.utils.rst  tedi.rst  tedi.utils.rst
docs/_modules/: index.html
docs/_modules/src/tedi/: evidence.html  gaussian_process.html  (+3 more)
docs/pages/doctrees/: environment.pickle  index.doctree  tedi.doctree  tedi.utils.doctree
docs/pages/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tedi.html  tedi.utils.html
examples/: __init__.py  calculate_likelihood.py  run_examples.sh  run_mcmc.py  run_plot.py
src/: __init__.py
src/tedi/: __init__.py  evidence.py  gaussian_process.py  kernels.py  lib.py  means.py  process.py  student_process.py  time.py  utils.py
src/tedi/utils/: __init__.py  evidence.py  function.py  kernels.py  means.py  time.py
tedi/: __init__.py  astro.py  evidence.py  kernels.py  lib.py  means.py  process.py  time.py  utils.py
tests/: __init__.py  test.py  test1.py  test3.py  test_02.py  test_03.py  test_04.py  test_carmenes.py  test_evidence.py  test_gaussian_process.py  test_kernels.py  test_means.py  test_student_process.py
tests/test_utils/: __init__.py  test_evidence.py  test_function.py  test_kernels.py  test_means.py  test_time.py
(+17 files in other folders)
